[project]
name = "yield-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=5.24.1",
    "dash-bootstrap-templates>=1.3.0",
    "gunicorn>=23.0.0",
]
