[project]
name = "yield-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "plotly>=5.24.1",
    "dash-bootstrap-templates>=1.3.0",
    "dash-vega-components",
    "gunicorn>=23.0.0",
    "kaleido>=0.4",
    "great-tables",
    "streamlit",
    "holoviews",
    "hvplot",
    "panel",
    "param",
    "altair",
    "bokeh",
    "dask[complete]",
    "shiny",
    "statsmodels",
    "polars",
]

[tool.ruff]
preview = true
fix = true
show-fixes = true
line-length = 88
include = ["*.ipynb", "*.qmd"]
# indent-size = 4
# indent-style = "space"

ignore = [
    "E252", # missing whitespace around parameter equals
    "E501", # line too long
    "E203", # whitespace before ':'
    "E231", # missing whitespace after ','
    "E741", # ambiguous variable name
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used
    # "W503", # line break before binary operator
    # "W504", # line break after binary operator
]

[tool.ruff.analyze]
detect-string-imports = true
exclude = ["generated"]

[tool.ruff.lint]
# Allow minus-sign (U+2212), greek-small-letter-rho (U+03C1), and the asterisk-operator (U+2217),
# which could be confused for "-", "p", and "*", respectively.
allowed-confusables = ["−", "ρ", "∗"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# ignore = [
#     "E252", # missing whitespace around parameter equals
#     "E501", # line too long
#     "E203", # whitespace before ':'
#     "E231", # missing whitespace after ','
#     "E741", # ambiguous variable name
#     "F401", # module imported but unused
#     "W503", # line break before binary operator
#     "W504", # line break after binary operator
# ]

[tool.ruff.format]
exclude = ["generated"]
indent-style = "tab"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = 60

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
]

